front: fix scroll bar macro mode   - remove font size in timetable collapse button css class

--- a/front/src/styles/scss/applications/operationalStudies/_scenario.scss
+++ b/front/src/styles/scss/applications/operationalStudies/_scenario.scss
@@ -32,7 +32,6 @@
       color: var(--white);
       border: unset;
       border-radius: 4px;
-      font-size: 1.5rem;
       padding: 0.5rem;
       z-index: 2;
     }
